--- a/src/styles/case-studies.module.css
+++ b/src/styles/case-studies.module.css
@@ -40,4 +40,20 @@
       grid-template-columns: repeat(2, 1fr);
     }
   }
-  
+  @media (max-width: 768px) {
+    .heading {
+        font-size: 28px;
+        font-weight: 600;
+        color: #0a0a5e;
+        margin-bottom: 16px;
+      }
+      .subheading{
+        color: #0a0a5e;
+      }
+      .container {
+        /* max-width: 1200px; */
+        margin: 0 auto;
+        background-color: white;
+        padding: 28px 10px;
+      }
+  }
