--- a/src/styles/partners.module.css
+++ b/src/styles/partners.module.css
@@ -24,8 +24,18 @@
     right: 0;
     padding: 40px 20px;
 }
+.discover{
+    color: #26efe9;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    font-size: 19px;
+}
 .section h1{
-    color: #0d6efd;
+    color: #26efe9;
     margin: 0;
     width: 100%;
 }
