--- a/src/styles/purpose.module.css
+++ b/src/styles/purpose.module.css
@@ -35,6 +35,16 @@
     width: 100%;
     text-wrap: wrap;
 }
+.knowMore{
+    color: #26efe9;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    font-size: 19px;
+}
 @media (max-width:768px) {
     .section{
         width: 100%;
