--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -116,8 +116,8 @@
   }
 
   .indicator {
-    width: 40px;
-    height: 5px;
+    width: 30px;
+    height: 7px;
     border-radius: 10px;
     background-color: rgba(12, 72, 95, 0.578);
     border: none;
@@ -185,6 +185,9 @@
   @media (max-width: 640px) {
     .heading {
       font-size: 2rem;
+      font-weight: 500;
+      letter-spacing: 1px;
+      line-height: 50px;
     }
 
     .subheading {
@@ -271,7 +274,7 @@
 
   @media (max-width: 768px) {
     .heroContainer{
-      height: 450px;
+      height: 550px;
     }
     .carouselIndicators{
      bottom: 20px;
