--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -2,6 +2,9 @@
     width: 100%;
     background-color: white;
   }
+  .barIcon{
+    display: none;
+  }
   
   .topNav {
     display: flex;
@@ -10,6 +13,11 @@
     padding: 8px 24px;
     font-size: 14px;
     border-bottom: 1px solid #e5e7eb;
+  }
+  .searchWrapper{
+    display: flex;
+    align-items: center;
+    gap: 10px;
   }
   
   .navLink {
@@ -77,7 +85,12 @@
     .topNav{
         display: none;
     }
-   
+    .barIcon{
+        display: block;
+    }
+    .navLeft {
+        gap: 0px;
+      }
   }
   
   .mainNavLink {
